--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,12 +27,6 @@
     --moon-shadow-color: 255 200 150;
 }
 
-@property --rayGlow {
-    syntax: '<percentage>';
-    initial-value: 65%;
-    inherits: false;
-}
-
 /*#endregion*/
 
 /*#region Animations*/
@@ -54,15 +48,18 @@
 
 @keyframes rayBrightness {
     0% {
-        --rayGlow: 62%;
+        background: radial-gradient(ellipse at 50% 50%, rgb(var(--ray-color) / 0%) 42%, 
+                                    rgb(var(--background-color)) 62%) 0% 0%/100% 100% no-repeat;
     }
 
     50% {
-        --rayGlow: 70%;
+        background: radial-gradient(ellipse at 50% 50%, rgb(var(--ray-color) / 0%) 50%, 
+                                    rgb(var(--background-color)) 70%) 0% 0%/100% 100% no-repeat;
     }
 
     100% {
-        --rayGlow: 62%;
+        background: radial-gradient(ellipse at 50% 50%, rgb(var(--ray-color) / 0%) 42%, 
+                                    rgb(var(--background-color)) 62%) 0% 0%/100% 100% no-repeat;
     }
 }
 
