Fixed Bottom Bar Issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,6 +133,7 @@ html, body {
 /*#endregion*/
 
 #app {
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
