--- a/stylesheet.css
+++ b/stylesheet.css
@@ -347,13 +347,30 @@ span {
     width: 100vw;
     height: 88vh;
     background-color: transparent;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
 .resumeContainer {
+    width: 45vw;
+    height: 68vw;
+    margin: 0 4vw 0 1vw;
+}
+
+#resume {
     width: 48vw;
-    height: 75vh;
+    height: 68vw;
+    object-fit: cover;
+    object-position: top;
+    filter: blur(1px);
+}
+
+.resumeContainer::after {
+    box-shadow: inset 0 0 200px 100px rgb(40 40 40 / 68%);
+}
+
+.resumeContainer:hover {
+    box-shadow: inset 0 0 200px 100px rgb(40 40 40 / 68%), 0 0 10px rgb(var(--ray-color) / 30%);
 }
 
 /*#endregion*/
