--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,17 +69,14 @@
 @keyframes eclipseScroll {
     0% {
         opacity: 1;
-        transform: rotateZ(0deg);
     }
 
     18% {
-        opacity: 0.3;
-        transform: rotateZ(60deg);
+        opacity: 0;
     }
 
     100% {
-        opacity: 0.3;
-        transform: rotateZ(60deg);
+        opacity: 0;
     }
 }
 
@@ -162,7 +159,7 @@ html, body {
     border: 0px solid rgba(255, 255, 255, 0);
     background: rgb(var(--background-color));
 
-    animation: 1ms both running headerHeight;
+    animation: 1ms running headerHeight;
     animation-timeline: --appScroll;
     transition: all 4000ms cubic-bezier(0.3, 0.01, 0, 0.99);
     will-change: transform, border;
