--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,12 +71,24 @@
         opacity: 1;
     }
 
-    18% {
+    25% {
         opacity: 0;
+        transform: rotateZ(27deg);
     }
 
     100% {
         opacity: 0;
+        transform: rotateZ(27deg);
+    }
+}
+
+@keyframes startAnimation {
+    0% {
+        transform: scale(0.01);
+    }
+    
+    100% {
+        transform: scale(1);
     }
 }
 
@@ -86,28 +98,33 @@
     }
 
     16% {
-        transform: scale(0.5);
+        transform: translateY(-42.5vh) scale(0.5);
     }
 
     100% {
-        transform: scale(0.5);
+        transform: translateY(-42.5vh) scale(0.5);
     }
 }
 
 @keyframes headerHeight {
     0% {
-        height: 100vh;
+        transform: scaleY(100%);
         border-bottom: 0px solid rgba(255, 255, 255, 0);
     }
 
-    16% {
-        height: 12vh;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.9);
+    12% {
+        border-bottom: 6px solid rgba(255, 255, 255, 0.4);
+    }
+
+    18% {
+        transform: scaleY(12%);
+        border-bottom: 10px solid rgba(255, 255, 255, 0.9);
+
     }
 
     100% {
-        height: 12vh;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.9);
+        transform: scaleY(12%);
+        border-bottom: 10px solid rgba(255, 255, 255, 0.9);
     }
 }
 
@@ -157,40 +174,42 @@ html, body {
     align-items: center;
     justify-content: center;
     border: 0px solid rgba(255, 255, 255, 0);
-    background: rgb(var(--background-color));
-
-    animation: 1ms running headerHeight;
+    animation: 1ms both running headerHeight;
     animation-timeline: --appScroll;
-    transition: all 4000ms cubic-bezier(0.3, 0.01, 0, 0.99);
     will-change: transform, border;
 }
 
 #title {
+    position: fixed;
+    top: 46vh;
+    height: 8vh;
     width: 100%;
     margin: 0;
-    z-index: 1;
+    z-index: 9;
     font-family: "Equinox";
     font-size: 400%;
     color: white;
     text-align: center;
     pointer-events: none;
     text-shadow: 0 0 4px rgba(255, 255, 255, 60%);
-    transform: translateZ(0px) scale(0.9375);
-    
     animation: 1ms both running titleScale;
     animation-timeline: --appScroll;
+    transform-origin: top;
     will-change: transform;
 }
 
 #eclipse {
     position: fixed;
+    top: 0;
     display: grid;
-    height: 100%;    
+    height: 100%;  
+    z-index: 7;  
     aspect-ratio: 1/1;
     grid-template-columns: 1fr;
     grid-row-start: 1;
     grid-column-start: 1;
-    transform-origin: 50% -200%;
+    transform-origin: 50% -100%;
+    pointer-events: none;
 
     animation: 1ms both running eclipseScroll;
     animation-timeline: --appScroll;
