--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,11 +20,15 @@
     --ray-color: 150 40 220;
     --secondary-color: 90 20 140;
     --moon-shadow-color: 250 220 255;
+    --glow-color: 200 130 210;
 
     /*Orange*/
     /*--ray-color: 250 140 0;
     --secondary-color: 235 60 0;
     --moon-shadow-color: 255 200 150;*/
+
+    --linGrad: linear-gradient(to bottom right, rgb(var(--secondary-color)) 0%, rgb(var(--glow-color)) 30%, rgb(var(--glow-color)) 60%, rgb(var(--ray-color)) 100%);
+    --linGradSize: calc(100% + 11px);
 }
 
 @property --rayGlow {
@@ -159,6 +163,7 @@ html, body {
     overflow-y: scroll;
     scroll-timeline-name: --appScroll;
 }
+
 
 /*#region Eclipse*/
 #logo {
@@ -434,6 +439,7 @@ span {
 #projectsScroller {
     height: 600vh;
     transform: translateZ(0);
+    scroll-timeline-name: --projectScroll;
 }
 
 #projects {
@@ -463,23 +469,60 @@ span {
 
 .projectTile {
     position: absolute;
-    width: 22vw;
-    height: 40vh;
+    width: 23vw;
+    height: 43vh;
     top: 18vh;
-    padding: 6vh 2vw 6vh 3vw;
-    border-radius: 5px;
-    box-shadow: inset 0 0 200px 0px rgb(255 255 255 / 26%), 
-                0 0 5px 0px rgba(255, 255, 255, 0.4);
-    background: rgb(var(--background-color) / 50%);
+    padding: 3vh;
+    border-radius: 12px;
+    overflow: hidden;
     text-decoration: none;
     color: white;
-    transition: box-shadow 200ms linear, color 200ms linear;
+    transition: all 100ms ease-in-out !important;
 }
 
-.projectTile:hover {
-    box-shadow: inset 0 0 200px 1000px rgb(var(--moon-shadow-color)), 
-                0 0 5px 0px rgba(255, 255, 255, 0.4);
+.projectTile::after {
+    position: absolute;
+    inset: 0;
+    content: "";
+    background: var(--linGrad) 50%/var(--linGradSize) var(--linGradSize);    
+    mask: linear-gradient(hsla(0,0%,100%,0),hsla(0,0%,100%,0)),linear-gradient(hsl(0,0%,100%),hsl(0,0%,100%));
+    border-radius: 12px;
+    border: solid 4px transparent;
+    mask-clip: padding-box, border-box;
+    mask-composite: intersect;
+}
+
+.projectOutline {
+    position: absolute;
+    inset: 0;
+    filter: blur(7px);
+    border-radius: 12px;
+}
+
+.projectOutline::after {
+    position: absolute;
+    inset: 0;
+    content: "";
+    background: var(--linGrad) 50%/var(--linGradSize) var(--linGradSize);
+    mask: linear-gradient(hsla(0,0%,100%,0),hsla(0,0%,100%,0)),linear-gradient(hsl(0,0%,100%),hsl(0,0%,100%));
+    border-radius: 12px;
+    border: solid 6px transparent;
+    mask-clip: padding-box, border-box;
+    mask-composite: intersect;
+}
+
+.projectContainer {
+    position: absolute;
+    inset: 2vh;
+    border-radius: 5px;
+    padding: 4vh 2vh 3vh 4vh;
+    background-color: rgb(var(--background-color) / 50%);
+    color: white;
+}
+
+.projectTile:hover > .projectContainer {
     color: rgb(var(--background-color));
+    background-color: rgb(var(--glow-color) / 80%);
 }
 
 .projectName {
