--- a/stylesheet.css
+++ b/stylesheet.css
@@ -564,3 +564,114 @@ span {
 }
 
 /*#endregion*/
+
+
+@media screen and (orientation: portrait) {
+    #eclipse {
+        top: 30%;
+        height: 40% !important;
+    }
+
+    #title {
+        top: calc(50% - 12px);
+        height: 20px;
+        font-size: 125%;
+    }
+
+    #aboutHeading {
+        font-size: 150%;
+    }
+
+    #aboutText {
+        font-size: 20px;
+    }
+
+    #projectsTitle {
+        height: 400px;
+        top: calc(50% - 200px);
+        left: 25px;
+        font-size: 25px;
+        letter-spacing: 30px;
+    }
+
+    .projectTile {
+        width: 270px;
+        height: 300px;
+        top: 220px;
+        left: 38px;
+        scale: 80%;
+    }
+
+    .projectName {
+        font-size: 25px;
+    }
+
+    .projectDescription {
+        width: 230px;
+        font-size: 11px;
+        line-height: 26px;
+    }
+
+    .projectHeader {
+        margin: 15px 0 8px 0;
+        font-size: 20px;
+    }
+
+    #projectRoadmap {
+        height: 490px;
+    }
+
+    #projectRoadmapPoint {
+        height: 65px;
+        width: 65px;
+    }
+
+    #footer {
+        display: block;
+    }
+
+    #resumeHeading {
+        height: 250px;
+        width: 150px;
+        margin-left: calc(50% - 75px);
+        font-size: 180%;
+        float: none;
+    }
+
+    #resumeContainer {
+        display: block;
+        width: 300px;
+        height: 430px;
+        margin: 0 0 0 calc(50% - 150px);
+        box-shadow: inset 0 0 200px rgb(255 255 255 / 50%);
+    }
+
+    #resume {
+        width: 300px;
+        height: 430px;
+    }
+
+    #links {
+        right: 20px;
+    }
+
+    .iconURL {
+        margin-left: 16px;
+        width: 15px;
+        height: 15px;
+    }
+
+    @keyframes titleScale {
+        0% {
+            transform: scale(1);
+        }
+
+        16% {
+            transform: translateX(-50px) translateY(-367px) scale(0.6);
+        }
+
+        100% {
+            transform: translateX(-50px) translateY(-367px) scale(0.6);
+        }
+    }
+}
